--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ header section
 }
 #header img#logo {
 	float:left;
-	margin-left:10px;
+	margin-left:0px;
 	margin-top:5px;
 }
 #right_header {
@@ -1812,4 +1812,10 @@ footer section
 	color:#fff;
 	line-height:17px;
 	padding-bottom:0;
+}
+
+.topsosyalmedya {
+
+margin-top: 30px;
+
 }
