--- a/css/style1.css
+++ b/css/style1.css
@@ -1814,8 +1814,8 @@ footer section
 }
 
 #sync1 .item{
-    padding: 80px 0px;
-    margin: 5px;
+    padding: 0px 0px;
+    margin: 0px;
     color: #FFF;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
@@ -1836,5 +1836,5 @@ footer section
   font-size: 18px;
 }
 #sync2 .synced .item{
-  background: #0c83e7;
+  background: #603030;
 }
