--- a/owl-carousel/owl.theme.css
+++ b/owl-carousel/owl.theme.css
@@ -12,18 +12,14 @@
 
 .owl-theme .owl-controls .owl-buttons div{
 	color: #FFF;
-	display: inline-block;
-	zoom: 1;
-	*display: inline;/*IE7 life-saver */
-	margin: 5px;
-	padding: 3px 10px;
-	font-size: 12px;
-	-webkit-border-radius: 30px;
-	-moz-border-radius: 30px;
-	border-radius: 30px;
-	background: #869791;
-	filter: Alpha(Opacity=50);/*IE7 fix*/
-	opacity: 0.5;
+  display: inline-block;
+  /* zoom: 1; */
+  padding: 3px 5px;
+  font-size: 70px;
+  border-radius: 0px;
+  background: rgba(96, 48, 48, 0.79);
+  filter: Alpha(Opacity=50);
+  opacity: 0.5;
 }
 /* Clickable class fix problem with hover on touch devices */
 /* Use it for non-touch hover action */
